--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Lautaro Duran | Portfolio</title>
   </head>
   <body>
+    <form name="contact" method="post" netlify hidden>
+      <input type="text" name="name" required />
+      <input type="email" name="email" required />
+      <textarea name="content" required></textarea>
+    </form>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
