--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta
+      name="description"
+      content="Desarrollador web frontend con experiencia en la creación de sitios web atractivos y funcionales. Descubre mi trabajo y habilidades en mi portfolio en línea."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lautaro Duran | Portfolio</title>
   </head>
   <body>
     <form name="contact" method="post" netlify hidden>
+      <input type="hidden" name="form-name" value="contact" />
       <input type="text" name="name" required />
       <input type="email" name="email" required />
       <textarea name="content" required></textarea>
